tests/manifests/nginx/01-rewrite-use-regex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-rewrite
  namespace: ingress-migration-mock
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: rewrite.bar.com
    http:
      paths:
      - path: /something
        pathType: Prefix
        backend:
          service:
            name: http-svc
            port:
              number: 80
