tests/manifests/nginx/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: ingress-migration-mock
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: ingress-migration-mock
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-secured
  namespace: ingress-migration-mock
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: production
  namespace: ingress-migration-mock
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: ingress-migration-mock
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8080
